--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @import "global/_reboot";
 @import "global/_container";
 @import "global/_visually-hidden";
+@import 'global/no-scroll';
 
 
 /* Blocks */
