--- a/scss/blocks/_basket.scss
+++ b/scss/blocks/_basket.scss
@@ -41,10 +41,9 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 16.8px;
-  }
 
-  &__close {
-    padding: 0;
+    &-close {
+      padding: 0;
     width: 20px;
     height: 20px;
     background-color: transparent;
@@ -52,7 +51,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    }
   }
+
+  
 
   &__img {
     align-items: flex-start;
