--- a/scss/blocks/_message.scss
+++ b/scss/blocks/_message.scss
@@ -1,6 +1,7 @@
 .message {
   position: fixed;
   display: flex;
+  cursor: pointer;
   align-items: center;
   justify-content: center;
   background-color: rgba($color-black, 0.7);
@@ -8,21 +9,45 @@
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 1100;
 
   &__content {
-    width: 400px;
-    min-height: 200px;
+    width: 719px;
+    min-height: 256px;
     background-color: $color-white;
     border-radius: 10px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    align-items: start;
     justify-content: center;
-    position: relative;
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+    transform: translateX(-50%);
+    
     padding: 40px;
     text-align: center;
     font-size: 24px;
     font-weight: 500;
     line-height: 36px;
+  }
+
+  &__title  {
+    margin: 0 0 20px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 130%;
+    text-align: left;
+  }
+
+  &__text {
+    margin: 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 140%;
+    text-align: left;
   }
 
   &__close {
