--- a/scss/blocks/_tooltip.scss
+++ b/scss/blocks/_tooltip.scss
@@ -29,6 +29,10 @@
     transform: translate(9px, calc(-100% - 8px));
 
     display: none;
+
+    &--active {
+      display: block;
+    }
   }
 
   &__text {
